[package]
name = "pas_trop_malin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basics
#my_logger = { path = "../my_logger" }
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
# Features
regex = "1.5"
reqwest = "0.11"
image = "0.24"
base64 = "0.20.0-alpha.1"
